# goosechase-protobuf-bindings-python

./: README.md  generate.sh  pyproject.toml  requirements.txt
goose_pb/pb/: client_approval_reconciler_pb2.py  client_approval_reconciler_pb2.pyi  draft_mod_request_pb2.py  draft_mod_request_pb2.pyi  email_pb2.py  email_pb2.pyi  search_mod_request_pb2.py  search_mod_request_pb2.pyi
goose_pb/pydantic/: __init__.py  client_approval_reconciler_p2p.py  draft_mod_request_p2p.py  email_p2p.py  search_mod_request_p2p.py
