[tool.poetry]
name = "goose-pb"
version = "1.0.1"
description = ""
authors = ["Charuka Samarakoon <charuka@surge.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.25.1"
protobuf-to-pydantic = { version = "^0.2.3", extras = ["mypy-protobuf"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
